fix homepage code window overflow scroll

--- a/public/assets/css/laravel.css
+++ b/public/assets/css/laravel.css
@@ -2050,7 +2050,9 @@ nav.main {
   top: 46px;
   width: 554px;
   left: 50%;
-  margin-left: -278px; }
+  margin-left: -278px;
+  padding-bottom: 0;
+  overflow: hidden; }
 
 @media all and (max-width: 780px) {
   .home .hero svg {
