--- a/resources/assets/sass/content/_home.scss
+++ b/resources/assets/sass/content/_home.scss
@@ -36,6 +36,8 @@
     width: 554px;
     left: 50%;
     margin-left: -278px;
+    padding-bottom: 0;
+    overflow: hidden;
 }
 
 @media all and (max-width: 780px) {
